force-app/main/default/objects/CADMV_OrganizationSettings__mdt/CADMV_OrganizationSettings__mdt.object-meta.xml
<CustomObject>
    <description>Custom type used to control organization metadata.</description>
    <label>Organization Settings</label>
    <pluralLabel>Organization Settings</pluralLabel>
</CustomObject>