force-app/main/default/objects/CADMV_OrganizationSettings__mdt/fields/CADMV_Email__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Email__c</fullName>
    <description>Contains emails of users from back-end process</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>