force-app/main/default/objects/CADMV_OrganizationSettings__mdt/fields/CADMV_OmniContainer__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OmniContainer__c</fullName>
    <description>Contains the pre-defined or hard-coded values used in Omni-scripts</description>
    <label>Omni Container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>