force-app/main/default/objects/CADMV_OrganizationSettings__mdt/fields/CADMV_SystemId__c.field-meta.xml
<CustomField>
    <fullName>CADMV_SystemId__c</fullName>
    <label>SystemId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>