force-app/main/default/objects/CADMV_OrganizationSettings__mdt/fields/CADMV_URL__c.field-meta.xml
<CustomField>
    <fullName>CADMV_URL__c</fullName>
    <description>Contains community and org and integration urls</description>
    <label>Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>